[gd_scene load_steps=2 format=3 uid="uid://betcsy2o6lfkm"]

[ext_resource type="Script" uid="uid://bg5fjtb8b4b41" path="res://Tabs/Main/Main.gd" id="1"]

[node name="Main" type="VBoxContainer"]
offset_right = 1024.0
offset_bottom = 938.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="ThemeEditor" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"Header"
text = "Hedgewars Theme Editor 3"
horizontal_alignment = 1

[node name="VersionContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_right = 8

[node name="Version" type="Label" parent="VersionContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "v"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="SettingsHeader" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"Header"
text = "Editor settings"

[node name="GamePathHeader" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"Section"
text = "Game path"
horizontal_alignment = 1

[node name="GamePath" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="GamePathLabel" type="Label" parent="GamePath"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2

[node name="Button" type="Button" parent="GamePath"]
layout_mode = 2
text = "..."

[node name="UserPathHeader" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"Section"
text = "User path"
horizontal_alignment = 1

[node name="UserPath" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="UserPathLabel" type="Label" parent="UserPath"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2

[node name="Button" type="Button" parent="UserPath"]
layout_mode = 2
text = "..."

[node name="MiscHeader" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"Section"
text = "Misc"
horizontal_alignment = 1

[node name="MaximizeContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="EnableMaximize" type="CheckBox" parent="MaximizeContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Maximize on start"

[node name="LanguageContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="LanguageContainer"]
layout_mode = 2
text = "Preferred language"
horizontal_alignment = 1

[node name="LanguageList" type="OptionButton" parent="LanguageContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ThemesHeader" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"Header"
text = "Themes"

[node name="PackHeader" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"Section"
text = "Pack themes"
horizontal_alignment = 1

[node name="PackContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PackThemes" type="Button" parent="PackContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Pack themes"

[node name="CreatePack" type="Button" parent="PackContainer"]
visible = false
layout_mode = 2
text = "Create pack"

[node name="Cancel" type="Button" parent="PackContainer"]
visible = false
layout_mode = 2
text = "Cancel"

[node name="VSeparator" type="VSeparator" parent="PackContainer"]
visible = false
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="PackName" type="LineEdit" parent="PackContainer"]
visible = false
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
placeholder_text = "Enter package name"

[node name="VSeparator2" type="VSeparator" parent="PackContainer"]
visible = false
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="IncludeMusic" type="CheckBox" parent="PackContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Include custom music"

[node name="SaveContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SaveHeader" type="Label" parent="SaveContainer"]
layout_mode = 2
theme_type_variation = &"Section"
text = "Save theme"
horizontal_alignment = 1

[node name="Save" type="HBoxContainer" parent="SaveContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="SaveContainer/Save"]
unique_name_in_owner = true
layout_mode = 2
text = "Save theme"

[node name="VSeparator" type="VSeparator" parent="SaveContainer/Save"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="Label" type="Label" parent="SaveContainer/Save"]
layout_mode = 2
text = "Version"

[node name="ThemeVersion" type="SpinBox" parent="SaveContainer/Save"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Use 0 to disable versioning"
max_value = 10000.0

[node name="VSeparator2" type="VSeparator" parent="SaveContainer/Save"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="EnableAutosave" type="CheckBox" parent="SaveContainer/Save"]
unique_name_in_owner = true
layout_mode = 2
text = "Enable autosave"

[node name="VSeparator3" type="VSeparator" parent="SaveContainer/Save"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="OpenDir" type="Button" parent="SaveContainer/Save"]
layout_mode = 2
text = "Open theme directory"

[node name="SelectThemeHeader" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"Section"
text = "Select theme"
horizontal_alignment = 1

[node name="NewTheme" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
text = "New theme"

[node name="SelectPack" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Select themes to pack"
horizontal_alignment = 1

[node name="ThemeAlign" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="ThemesList" type="HFlowContainer" parent="ThemeAlign"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Dialogs" type="Control" parent="."]
layout_mode = 2

[node name="GameDialog" type="FileDialog" parent="Dialogs"]
unique_name_in_owner = true
size = Vector2i(600, 400)
access = 2

[node name="UserDialog" type="FileDialog" parent="Dialogs"]
unique_name_in_owner = true
size = Vector2i(600, 400)
access = 2

[node name="ErrorDialog" type="AcceptDialog" parent="Dialogs"]
size = Vector2i(300, 200)
dialog_autowrap = true

[node name="NewThemeDialog" type="ConfirmationDialog" parent="Dialogs"]
size = Vector2i(300, 104)

[node name="LineEdit" type="LineEdit" parent="Dialogs/NewThemeDialog"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -44.0
offset_right = -8.0
offset_bottom = -5.0
placeholder_text = "Enter name"

[node name="Control" type="Control" parent="."]
layout_mode = 2

[connection signal="pressed" from="GamePath/Button" to="Dialogs/GameDialog" method="popup_centered"]
[connection signal="pressed" from="UserPath/Button" to="Dialogs/UserDialog" method="popup_centered"]
[connection signal="item_selected" from="LanguageContainer/LanguageList" to="." method="change_language"]
[connection signal="pressed" from="PackContainer/PackThemes" to="." method="pack_start"]
[connection signal="pressed" from="PackContainer/CreatePack" to="." method="pack_accept"]
[connection signal="pressed" from="PackContainer/Cancel" to="." method="pack_cancel"]
[connection signal="pressed" from="SaveContainer/Save/OpenDir" to="." method="open_theme_directory"]
[connection signal="pressed" from="NewTheme" to="." method="on_new_theme_pressed"]
[connection signal="dir_selected" from="Dialogs/GameDialog" to="." method="set_game_path"]
[connection signal="dir_selected" from="Dialogs/UserDialog" to="." method="set_user_path"]
[connection signal="confirmed" from="Dialogs/NewThemeDialog" to="." method="new_theme"]
